fix: priceCards alignment

--- a/styles.scss
+++ b/styles.scss
@@ -342,6 +342,8 @@ button {
         text-align: left;
         padding-left: 1.5rem;
         line-height: 2.7rem;
+        width: 40%;
+
     }
 
     .feature--image,
@@ -496,7 +498,7 @@ button {
     width: 100%;
 }
 
-@media only screen and (max-width: 414px) {
+@media only screen and (max-width: 485px) {
 
     .priceCards {
 
@@ -507,7 +509,7 @@ button {
     }
 }
 
-@media only screen and (max-width: 380px) {
+@media only screen and (max-width: 425px) {
 
     .priceCards {
 
